// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns error data from fetch 1`] = `
Object {
  "data": undefined,
  "error": [CombinedError: [Network] ],
  "operation": Object {
    "context": Object {
      "fetchOptions": Object {
        "method": "POST",
      },
      "requestPolicy": "cache-first",
      "url": "http://localhost:3000/graphql",
    },
    "key": 2,
    "operationName": "query",
    "query": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 103,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 13,
              "start": 6,
            },
            "value": "getUser",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 103,
              "start": 28,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [
                  Object {
                    "kind": "Argument",
                    "loc": Object {
                      "end": 50,
                      "start": 39,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 43,
                        "start": 39,
                      },
                      "value": "name",
                    },
                    "value": Object {
                      "kind": "Variable",
                      "loc": Object {
                        "end": 50,
                        "start": 45,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 50,
                          "start": 46,
                        },
                        "value": "name",
                      },
                    },
                  },
                ],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 99,
                  "start": 34,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 38,
                    "start": 34,
                  },
                  "value": "user",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 99,
                    "start": 52,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 62,
                        "start": 60,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 62,
                          "start": 60,
                        },
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 78,
                        "start": 69,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 78,
                          "start": 69,
                        },
                        "value": "firstName",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 93,
                        "start": 85,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 93,
                          "start": 85,
                        },
                        "value": "lastName",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [
            Object {
              "defaultValue": undefined,
              "directives": Array [],
              "kind": "VariableDefinition",
              "loc": Object {
                "end": 27,
                "start": 14,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 27,
                  "start": 21,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 21,
                  },
                  "value": "String",
                },
              },
              "variable": Object {
                "kind": "Variable",
                "loc": Object {
                  "end": 19,
                  "start": 14,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 19,
                    "start": 15,
                  },
                  "value": "name",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 103,
        "start": 0,
      },
    },
    "variables": Object {
      "name": "Clara",
    },
  },
}
`;

exports[`returns response data from fetch 1`] = `
Object {
  "data": Object {
    "data": Object {
      "user": 1200,
    },
  },
  "error": undefined,
  "operation": Object {
    "context": Object {
      "fetchOptions": Object {
        "method": "POST",
      },
      "requestPolicy": "cache-first",
      "url": "http://localhost:3000/graphql",
    },
    "key": 2,
    "operationName": "query",
    "query": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 103,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 13,
              "start": 6,
            },
            "value": "getUser",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 103,
              "start": 28,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [
                  Object {
                    "kind": "Argument",
                    "loc": Object {
                      "end": 50,
                      "start": 39,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 43,
                        "start": 39,
                      },
                      "value": "name",
                    },
                    "value": Object {
                      "kind": "Variable",
                      "loc": Object {
                        "end": 50,
                        "start": 45,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 50,
                          "start": 46,
                        },
                        "value": "name",
                      },
                    },
                  },
                ],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 99,
                  "start": 34,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 38,
                    "start": 34,
                  },
                  "value": "user",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 99,
                    "start": 52,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 62,
                        "start": 60,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 62,
                          "start": 60,
                        },
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 78,
                        "start": 69,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 78,
                          "start": 69,
                        },
                        "value": "firstName",
                      },
                      "selectionSet": undefined,
                    },
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 93,
                        "start": 85,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 93,
                          "start": 85,
                        },
                        "value": "lastName",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [
            Object {
              "defaultValue": undefined,
              "directives": Array [],
              "kind": "VariableDefinition",
              "loc": Object {
                "end": 27,
                "start": 14,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 27,
                  "start": 21,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 21,
                  },
                  "value": "String",
                },
              },
              "variable": Object {
                "kind": "Variable",
                "loc": Object {
                  "end": 19,
                  "start": 14,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 19,
                    "start": 15,
                  },
                  "value": "name",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 103,
        "start": 0,
      },
    },
    "variables": Object {
      "name": "Clara",
    },
  },
}
`;
